--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="terminadas">Terminadas</string>
     <string name="crear">Crear</string>
     <string name="tareasterminadas">Tareas Terminadas</string>
-    <string name="nuevaTarea">Nueva Tarea</string>
+    <string name="nuevaTarea">Nombre</string>
     <string name="btnCrear">Crear Tarea</string>
+    <string name="descripcion">Descripción</string>
 </resources>
